--- a/_sass/components/_cards.scss
+++ b/_sass/components/_cards.scss
@@ -412,7 +412,7 @@
       &.nds-color {
         --card-bg: var(--alpha-white-10);
         --card-bg-hover: var(--alpha-white-20);
-        --card-border: var(--colors-neutral-700);
+        --card-border: var(--colors-neutral-500);
       }
     }
   }
@@ -442,7 +442,7 @@
       &.nds-color {
         --card-bg: var(--alpha-lavender-10);
         --card-bg-hover: var(--alpha-lavender-20);
-        --card-border: var(--colors-tertiary-lavendar-700);
+        --card-border: var(--colors-tertiary-lavendar-500);
       }
     }
   }
